# windows-rightclick-vault-import

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  kbintake_rust_scaffold.md
.github/workflows/: ci.yml  com-validation.yml  installer-validate.yml  release.yml
docs/: CLAUDE_HANDOFF_V2.md  CONFIGURATION.md  INSTALL.md  PRD.md  PROJECT_STATUS.md  RELEASE_CHECKLIST.md  ROADMAP.md  TEMPLATE_GALLERY.md  V2_DEVELOPMENT_PLAN.md  V2_ISSUE_MAP.md  WIN11_COM_FEASIBILITY.md
installer/: kbintake.nsi
installer/winget/1.0.0/: GeziP.KBIntake.installer.yaml
kbintake/: Cargo.toml
kbintake-com/: Cargo.toml
kbintake-com/src/: command.rs  factory.rs  lib.rs  reg.rs  server.rs
kbintake/scripts/: register_dir_context_menu.reg  register_file_context_menu.reg  unregister_dir_context_menu.reg  unregister_file_context_menu.reg
kbintake/src/: app.rs  clipboard.rs  exit_codes.rs  i18n.rs  lib.rs  main.rs  notify.rs  obsidian.rs  service.rs
kbintake/src/adapter/: local_folder.rs
kbintake/src/agent/: mod.rs  scheduler.rs  watcher.rs  worker.rs
kbintake/src/cli/: mod.rs
kbintake/src/config/: mod.rs
kbintake/src/db/: mod.rs  schema.rs
kbintake/src/domain/: batch.rs  event.rs  item.rs  manifest.rs  mod.rs  target.rs
kbintake/src/explorer/: com_probe.rs  mod.rs
kbintake/src/logging/: mod.rs
kbintake/src/processor/: audit.rs  copier.rs  deduper.rs  dry_run.rs  frontmatter.rs  hasher.rs  mod.rs  scanner.rs  template.rs  validator.rs
kbintake/src/queue/: mod.rs  repository.rs  state_machine.rs
kbintake/src/tray/: autostart.rs  mod.rs
kbintake/src/tui/: mod.rs
kbintake/tests/: mvp_flow.rs
scripts/: validate-explorer-toast.ps1  validate-service-mode.ps1
(+3 files in other folders)
