[package]
name = "kbintake"
version = "1.0.1"
edition = "2021"
description = "Windows-friendly CLI for right-click importing files into a local knowledge-base vault"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
notify = "7"
ratatui = "0.29"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_System_Threading", "Win32_System_DataExchange"] }
winreg = "0.52"
winrt-notification = "0.5"
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
